--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,6 +1,8 @@
 !!!
 html
   head
-    title= title
+    title= "ROM Manager Developer Portal"
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(type='text/javascript', src='/javascripts/jquery-1.6.js')
+    script(type='text/javascript', src='/javascripts/upload.js')
   body!= body
