--- a/views/rom.jade
+++ b/views/rom.jade
@@ -1,5 +1,29 @@
-h1= "ROM Manager Developer Portal"
-h2= "Upload Android Update.zip"
+script
+    function validateUploadForm() {
+      var file = $("#file")[0];
+      var name = $("#name")[0];
+      var device = $("#device")[0];
+      var summary = $("#summary")[0];
+      if (name.value == null || name.value == "") {
+        alert('Please enter a friendly name for your update.zip.');
+        return false;
+      }
+      if (device && device.value == null || device.value == "" || device.value == "none") {
+        alert('Please the target device for your update.zip.');
+        return false;
+      }
+      if (summary.value == null || summary.value == "") {
+        alert('Please enter a description for your update.zip.');
+        return false;
+      }
+      if (file && file.value == null || file.value == "") {
+        alert('Please select the update.zip to be uploaded.');
+        return false;
+      }
+      return true;
+    }
+h1 ROM Manager Developer Portal
+h2 Upload Android Update.zip
 - if (statusLine)
     p(class="status")= statusLine
 br
@@ -46,3 +70,6 @@ form(method="post", id="upload", enctype=rom.filename ? "application/x-www-form-
     p
     #container
         input(type="submit", value=!rom.filename ? "Upload" : "Update")
+br
+br
+a(href="/developer") Go Back
