--- a/views/settings.jade
+++ b/views/settings.jade
@@ -18,33 +18,38 @@ script
       return true;
     }
 h1 ROM Manager Developer Portal
+a(href="/developer") Go Back
 h2 Developer Settings
 - if (statusLine)
     p(class="status")= statusLine
 br
 br
-form(method="post", id="upload", enctype="multipart/form-data", action="/developer/settings", onsubmit="return validateDeveloperForm()")
-    #container Developer Name
-    #container
-        input(type="text", id="name", name="name", value=developer.name)
-    p
-    #container Developer ID
-    #container
-        input(type="text", id="developerId", name="developerId", value=developer.developerId)
-    p
-    #container Description
-    #container
-        input(type="text", id="summary", name="summary", value=developer.summary)
-    p
-    p
-    - if (developer.icon)
-        img(src=developer.iconUrl)
-    #container icon file
-        #container
-            input(type="file", id="icon", name="icon", value=developer.icon)
-    p
-    #container
-        input(type="submit", value="Update")
+table
+    tr
+        td(valign='top')
+            form(method="post", id="upload", enctype="multipart/form-data", action="/developer/settings", onsubmit="return validateDeveloperForm()")
+                #container Developer Name
+                #container
+                    input(type="text", id="name", name="name", value=developer.name)
+                p
+                #container Developer ID
+                #container
+                    input(type="text", id="developerId", name="developerId", value=developer.developerId)
+                p
+                #container Description
+                #container
+                    input(type="text", id="summary", name="summary", value=developer.summary)
+                p
+                p
+                - if (developer.icon)
+                    img(src=developer.iconUrl)
+                #container icon file
+                    #container
+                        input(type="file", id="icon", name="icon", value=developer.icon)
+                p
+                #container
+                    input(type="submit", value="Update")
+        td
+            img(src="/images/developerlegend.jpg")
 br
 br
-a(href="/developer") Go Back
