note that saturday and sunday are premium

--- a/views/developer.jade
+++ b/views/developer.jade
@@ -25,3 +25,9 @@ table
                 a(href='javascript:confirmDelete(' + rom.id + ')') Delete
 - if (count == 0)
     p(class='status') No ROMs listed. Get started by uploading one!
+br
+br
+br
+#container ROM hosting is free. ROMs hosted via ROM Manager Developer Portal will be listed
+#container in the free section Monday through Friday. They will be in the Premium section
+#container Saturday and Sunday.
