--- a/views/rom.jade
+++ b/views/rom.jade
@@ -73,7 +73,7 @@ table
                 - if (rom.downloadUrl)
                     #container ro.rommanager.developerid
                     - if (rom.developerIdProp == null || rom.developerIdProp == '')
-                        #container(class="error")="ro.rommanager.developerid=" rom.developerIdString
+                        #container(class="error")="ro.rommanager.developerid=" + rom.developerIdString
                         #container(class="error") was not found in your build.prop.
                         #container(class="error") OTA update notifications will not work.
                     - else if (rom.developerIdProp != rom.developerIdString)
