--- a/views/developer.jade
+++ b/views/developer.jade
@@ -14,7 +14,7 @@ table
             td
                 a(href='/developer/rom/' + rom.id) Edit
             td
-                a(href=rom.filename) Download
+                a(href=rom.downloadUrl) Download
 - if (count == 0)
     p(class='status') No ROMs listed. Get started by uploading one!
 br
