add highslide for image popup. add donate and homepage links.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,4 +4,7 @@ html
     title= "ROM Manager Developer Portal"
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(type='text/javascript', src='/javascripts/jquery-1.6.js')
+    script(type='text/javascript', src='/highslide/highslide.js')
+    link(rel='stylesheet', href='/highslide/highslide.css')
+
   body!= body
